# LLMWorker

./: .gitignore  README.md  README_PYPI.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
scripts/: bootstrap.sh  build.sh  check_name.py  demo.py  publish.sh
src/llmworker/: __init__.py  config.py  exceptions.py
src/llmworker/clients/: ollama_client.py
src/llmworker/workers/: image_worker.py  text_worker.py
tests/: test_smoke.py
