[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmworker"
version = "0.1.2"
description = "A lightweight Python toolkit for LLM text and image workflows with Ollama."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Sergio Ildefonso", email = "sergio@example.com" }
]
keywords = ["llm", "ollama", "ai", "python", "worker"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "requests>=2.32.0"
]

[project.urls]
Homepage = "https://github.com/sergioildefonso/llmworker"
Repository = "https://github.com/sergioildefonso/llmworker"
Issues = "https://github.com/sergioildefonso/llmworker/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
